tdf#92203 OReportDefinition should implement XDocumentEventListener interface

... since 252b0c4364690e00b45175693d35eb64a07324b4

Change-Id: I4101dac0078df7cb06f4d33da2a722cfbafb5608
Reviewed-on: https://gerrit.libreoffice.org/20875
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit d48370043b3759c79340c162048c5f2b4da394b9)